--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             - checkout
             - add_ssh_keys:
                 fingerprints:
-                  - 9f:ec:85:68:11:4c:06:89:2b:89:46:44:67:b3:fa:f6
+                  - "${KEY_FINGERPRINT}"
             - run: ssh ${USER_NAME}@${HOST_NAME} 'cd /var/www/Picoo_T.M && git pull'
 
 workflows:
